--- a/k8s/1000-gitlab/10-services.yml
+++ b/k8s/1000-gitlab/10-services.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitlab
+  name: gitlab-http
   namespace: gitlab
   labels:
     app: gitlab
@@ -13,10 +13,6 @@ spec:
       protocol: "TCP"
       port: 80
       targetPort: 80
-    - name: http-reg
-      protocol: "TCP"
-      port: 5050
-      targetPort: 5050
   type: ClusterIP
 ---
 apiVersion: v1
@@ -32,7 +28,6 @@ spec:
   ports:
     - name: tcp-git
       protocol: "TCP"
-      targetPort: 22
-      port: 32222
-      nodePort: 32222
-  type: NodePort
+      targetPort: 30022
+      port: 22
+  type: LoadBalancer 
