--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: gitlab-claim
+  namespace: gitlab
+  labels:
+    app: gitlab
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,6 +37,7 @@ spec:
           env:
             - name: GITLAB_OMNIBUS_CONFIG
               value: |
+                external_url 'http://gitlab.dev.lan:30080'
                 postgresql['enable'] = false
                 gitlab_rails['db_username'] = "gitlab"
                 gitlab_rails['db_password'] = "gitlab"
@@ -35,44 +50,19 @@ spec:
                 gitlab_rails['redis_host'] = 'redis'
                 gitlab_rails['redis_port'] = '6379'
                 gitlab_rails['gitlab_shell_ssh_port'] = 30022
-                external_url 'http://gitlab.dev.lan:30080'
           volumeMounts:
-            - name: config-volume
+            - name: gitlab
               mountPath: /etc/gitlab
-            - name: logs-volume
-              mountPath: /var/log/gitlab
-            - name: data-volume
+              subPath: gitlab_configuration
+            - name: gitlab
               mountPath: /var/opt/gitlab
-            - name: reg-volume
-              mountPath: /var/opt/gitlab/gitlab-rails/shared/registry
-            - name: uploads-volume
-              mountPath: /var/opt/gitlab/gitlab-rails/uploads
-            - name: gitlab-configmap-volume
-              mountPath: /etc/gitlab/gitlab.rb
-              subPath: gitlab.rb
+              subPath: gitlab_data
           ports:
             - name: http-web
-              containerPort: 80
+              containerPort: 30080
             - name: tcp-ssh
-              containerPort: 22
-            - name: http-reg
-              containerPort: 5050
+              containerPort: 30022
       volumes:
-        - name: gitlab-configmap-volume
-          configMap:
-            name: gitlab-config
-        - name: config-volume
-          hostPath:
-            path: /srv/gitlab/config
-        - name: logs-volume
-          hostPath:
-            path: /srv/gitlab/logs
-        - name: data-volume
-          hostPath:
-            path: /srv/gitlab/data
-        - name: reg-volume
-          hostPath:
-            path: /srv/gitlab/reg
-        - name: uploads-volume
-          hostPath:
-            path: /srv/gitlab/uploads
+        - name: gitlab
+          persistentVolumeClaim:
+            claimName: gitlab-claim
