--- a/k8s/1000-gitlab/10-services.yml
+++ b/k8s/1000-gitlab/10-services.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitlab-http
+  name: gitlab-http-svc
   namespace: gitlab
   labels:
     app: gitlab
@@ -18,7 +18,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitlab-ssh
+  name: gitlab-ssh-svc
   namespace: gitlab
   labels:
     app: gitlab-ssh
@@ -26,7 +26,7 @@ spec:
   selector:
     app: gitlab
   ports:
-    - name: tcp-git
+    - name: ssh
       protocol: "TCP"
       targetPort: 30022
       port: 22
