--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -37,7 +37,7 @@ spec:
           env:
             - name: GITLAB_OMNIBUS_CONFIG
               value: |
-                external_url 'http://gitlab.dev.lan:30080'
+                external_url 'http://gitlab.dev.lan'
                 nginx['listen_port'] = 80
                 nginx['listen_https'] = false
                 nginx['proxy_set_headers'] = {
@@ -57,7 +57,7 @@ spec:
                 gitlab_rails['redis_port'] = '6379'
                 gitlab_rails['gitlab_shell_ssh_port'] = 30022
                 prometheus['monitor_kubernetes'] = false
-                
+                letsencrypt['enable'] = false
           volumeMounts:
             - name: gitlab
               mountPath: /etc/gitlab
