--- a/k8s/1000-gitlab/41-postgres.yaml
+++ b/k8s/1000-gitlab/41-postgres.yaml
@@ -44,13 +44,13 @@ spec:
         tier: postgreSQL
     spec:
       containers:
-        - image: postgres:9.6.2-alpine
+        - image: postgres:12.6-alpine
           name: postgresql
           env:
             - name: POSTGRES_USER
               value: gitlab
             - name: POSTGRES_DB
-              value: gitlabhq_production
+              value: gitlab_home_dev
             - name: POSTGRES_PASSWORD
               value: gitlab
           ports:
