--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -1,16 +1,36 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: Service
 metadata:
-  name: gitlab-claim
+  name: gitlab-http-svc
   namespace: gitlab
   labels:
     app: gitlab
 spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
+  selector:
+    app: gitlab
+  ports:
+    - name: http-web
+      protocol: "TCP"
+      port: 80
+      targetPort: 80
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gitlab-ssh-svc
+  namespace: gitlab
+  labels:
+    app: gitlab-ssh
+spec:
+  selector:
+    app: gitlab
+  ports:
+    - name: ssh
+      protocol: "TCP"
+      port: 22
+      targetPort: 22
+  type: LoadBalancer 
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -70,7 +90,12 @@ spec:
               containerPort: 80
             - name: tcp-ssh
               containerPort: 22
-      volumes:
-        - name: gitlab
-          persistentVolumeClaim:
-            claimName: gitlab-claim
+  volumeClaimTemplates:
+  - metadata:
+      name: gitlab
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "local-path"
+      resources:
+        requests:
+          storage: 10Gi
