--- a/k8s/1000-gitlab/41-postgres.yaml
+++ b/k8s/1000-gitlab/41-postgres.yaml
@@ -2,30 +2,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgresql
+  name: postgresql-svc
   namespace: gitlab
   labels:
     app: gitlab
 spec:
   ports:
-    - port: 5432
+    - name: postgres
+      protocol: "TCP"
+      port: 5432
+      targetPort: 5432
   selector:
     app: gitlab
     tier: postgreSQL
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-claim
-  namespace: gitlab
-  labels:
-    app: gitlab
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
