--- a/k8s/1000-gitlab/42-redis.yml
+++ b/k8s/1000-gitlab/42-redis.yml
@@ -2,12 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
+  name: redis-svc
   labels:
     app: gitlab
 spec:
   ports:
-    - port: 6379
+    - name: redis
+      protocol: "TCP"
+      port: 6379
       targetPort: 6379
   selector:
     app: gitlab
