--- a/k8s/1000-gitlab/42-redis.yml
+++ b/k8s/1000-gitlab/42-redis.yml
@@ -39,6 +39,8 @@ spec:
           volumeMounts:
             - name: redis
               mountPath: /data
+            - name: redis
+              mountPath: /var/lib/redis
   volumeClaimTemplates:
   - metadata:
       name: redis
