--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -78,6 +78,8 @@ spec:
                 gitlab_rails['gitlab_shell_ssh_port'] = 30022
                 prometheus['monitor_kubernetes'] = false
                 letsencrypt['enable'] = false
+                gitlab_rails['initial_shared_runners_registration_token'] = "YrPPR6TUUv3AzRjAKLiB"
+                gitlab_rails['initial_root_password'] = "Ecx85GAZbbRJiV"
           volumeMounts:
             - name: gitlab
               mountPath: /etc/gitlab
