--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -1,4 +1,37 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: gitlab-data-vol
+  namespace: gitlab
+  labels:
+    type: local
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    #- ReadOnlyMany
+    - ReadWriteOnce
+  # persistentVolumeReclaimPolicy: Delete
+  storageClassName: gitlab-data #Задаем имя класса хранилища
+  hostPath:
+    path: "/tmp/gitlab"
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: gitlab-claim
+  namespace: gitlab
+  labels:
+    app: gitlab
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: gitlab-data
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: gitlab-http-svc
@@ -28,7 +61,7 @@ spec:
   ports:
     - name: ssh
       protocol: "TCP"
-      port: 22
+      port: 30022
       targetPort: 22
   type: LoadBalancer 
 ---
@@ -57,7 +90,7 @@ spec:
           env:
             - name: GITLAB_OMNIBUS_CONFIG
               value: |
-                external_url 'http://gitlab.dev.lan'
+                external_url 'https://gitlab.dev.lan'
                 nginx['listen_port'] = 80
                 nginx['listen_https'] = false
                 nginx['proxy_set_headers'] = {
@@ -67,7 +100,7 @@ spec:
                 postgresql['enable'] = false
                 gitlab_rails['db_username'] = "gitlab"
                 gitlab_rails['db_password'] = "gitlab"
-                gitlab_rails['db_host'] = "postgresql"
+                gitlab_rails['db_host'] = "postgresql-svc"
                 gitlab_rails['db_port'] = "5432"
                 gitlab_rails['db_database'] = "gitlab_home_dev"
                 gitlab_rails['db_adapter'] = 'postgresql'
@@ -92,12 +125,7 @@ spec:
               containerPort: 80
             - name: tcp-ssh
               containerPort: 22
-  volumeClaimTemplates:
-  - metadata:
-      name: gitlab
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "local-path"
-      resources:
-        requests:
-          storage: 10Gi
+      volumes:
+        - name: gitlab
+          persistentVolumeClaim:
+            claimName: gitlab-claim
