upd, not connect to gitlab.dev.lan

--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -61,9 +61,9 @@ spec:
   ports:
     - name: ssh
       protocol: "TCP"
-      port: 30022
+      port: 22
       targetPort: 22
-  type: LoadBalancer 
+  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
