--- a/k8s/1000-gitlab/42-redis.yml
+++ b/k8s/1000-gitlab/42-redis.yml
@@ -74,8 +74,10 @@ spec:
           volumeMounts:
             - name: redis
               mountPath: /data
+              subPath: redis_data
             - name: redis
               mountPath: /var/lib/redis
+              subPath: lib_redis
       volumes:
         - name: redis
           persistentVolumeClaim:
