--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -106,7 +106,7 @@ spec:
                 gitlab_rails['db_adapter'] = 'postgresql'
                 gitlab_rails['db_encoding'] = 'utf8'
                 redis['enable'] = false
-                gitlab_rails['redis_host'] = 'redis'
+                gitlab_rails['redis_host'] = 'redis-svc'
                 gitlab_rails['redis_port'] = '6379'
                 gitlab_rails['gitlab_shell_ssh_port'] = 30022
                 prometheus['monitor_kubernetes'] = false
@@ -116,10 +116,10 @@ spec:
           volumeMounts:
             - name: gitlab
               mountPath: /etc/gitlab
-              subPath: gitlab_configuration
+              #subPath: gitlab_configuration
             - name: gitlab
               mountPath: /var/opt/gitlab
-              subPath: gitlab_data
+              #subPath: gitlab_data
           ports:
             - name: http-web
               containerPort: 80
