--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -113,6 +113,7 @@ spec:
                 letsencrypt['enable'] = false
                 gitlab_rails['initial_shared_runners_registration_token'] = "YrPPR6TUUv3AzRjAKLiB"
                 gitlab_rails['initial_root_password'] = "Ecx85GAZbbRJiV"
+                gitlab_rails['registry_enabled'] = false
           volumeMounts:
             - name: gitlab
               mountPath: /etc/gitlab
