--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -113,7 +113,8 @@ spec:
                 letsencrypt['enable'] = false
                 gitlab_rails['initial_shared_runners_registration_token'] = "YrPPR6TUUv3AzRjAKLiB"
                 gitlab_rails['initial_root_password'] = "Ecx85GAZbbRJiV"
-                gitlab_rails['registry_enabled'] = false
+                gitlab_rails['registry_enabled'] = true
+                gitlab_rails['registry_api_url'] = "http://docker-registry-svc:5000"
           volumeMounts:
             - name: gitlab
               mountPath: /etc/gitlab
