add reg external url (SelfSignedCert)

--- a/k8s/1000-gitlab/44-docker-registry.yaml
+++ b/k8s/1000-gitlab/44-docker-registry.yaml
@@ -13,7 +13,7 @@ data:
         - nosniff
     log:
       fields:
-        service: registry
+        service: docker-registry-svc
     storage:
       cache:
         blobdescriptor: inmemory
