--- a/k8s/1000-gitlab/42-redis.yml
+++ b/k8s/1000-gitlab/42-redis.yml
@@ -14,7 +14,7 @@ spec:
   # persistentVolumeReclaimPolicy: Delete
   storageClassName: redis-data #Задаем имя класса хранилища
   hostPath:
-    path: "/tmp/gitlab-redis"
+    path: "/srv/gitlab-redis"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
