--- a/k8s/1000-gitlab/50-ingress.yml
+++ b/k8s/1000-gitlab/50-ingress.yml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: gitlab
   annotations:
+    cert-manager.io/cluster-issuer: selfsigned-issuer
     traefik.ingress.kubernetes.io/redirect-entry-point: https
 spec:
   rules:
