--- a/k8s/1000-gitlab/50-ingress.yml
+++ b/k8s/1000-gitlab/50-ingress.yml
@@ -33,6 +33,6 @@ spec:
               number: 5005
   tls:
     - hosts:
-        - reg.gitlab.dev.lan
-        - gitlab.dev.lan
+        #- reg.gitlab.dev.lan
+        - "*.gitlab.dev.lan"
       secretName: gitlab-home-tls
