--- a/k8s/0000-global/005-clusterissuer.SELF.yml
+++ b/k8s/0000-global/005-clusterissuer.SELF.yml
@@ -5,3 +5,6 @@ metadata:
   namespace: cert-manager
 spec:
   selfSigned: {}
+  # selfSigned:
+  #   crlDistributionPoints:
+  #   - "http://gitlab.dev.lan"
