--- a/k8s/1000-gitlab/05-certs.yml
+++ b/k8s/1000-gitlab/05-certs.yml
@@ -10,10 +10,12 @@ spec:
     kind: ClusterIssuer
   commonName: gitlab.dev.lan
   dnsNames:
-    - "*.gitlab.dev.lan"
+    - gitlab.dev.lan
+    - reg.gitlab.dev.lan
   acme:
     config:
       - http01:
           ingressClass: traefik
         domains:
-          - "*.gitlab.dev.lan"
+          - gitlab.dev.lan
+          - reg.gitlab.dev.lan
