--- a/k8s/1000-gitlab/40-deployment.yml
+++ b/k8s/1000-gitlab/40-deployment.yml
@@ -120,6 +120,7 @@ spec:
                 gitlab_rails['registry_enabled'] = true
                 gitlab_rails['registry_api_url'] = "http://docker-registry-svc:5000"
                 gitlab_rails['registry_issuer'] = "gitlab-issuer"
+                gitlab_rails['registry_key_path'] = "/certs/tls.key"
                 registry_external_url 'https://reg.gitlab.dev.lan'
                 registry_nginx['listen_port'] = 5005
                 registry_nginx['listen_https'] = false
@@ -130,6 +131,9 @@ spec:
             - name: gitlab
               mountPath: /var/opt/gitlab
               #subPath: gitlab_data
+            - mountPath: /certs
+              name: auth-cert
+              #readOnly: true
           ports:
             - name: http-web
               containerPort: 80
@@ -141,3 +145,6 @@ spec:
         - name: gitlab
           persistentVolumeClaim:
             claimName: gitlab-claim
+        - name: auth-cert
+          secret:
+            secretName: gitlab-home-tls
